--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -23,57 +23,32 @@
       <div class="row">
         <div class="card col-md-6" style="width: 18rem;">
           <div class="card-body">
+            <div class="row">
+              <input id="artist-input" class="form-control col-md-8 offset-md-1" type="search" placeholder="Search"
+                aria-label="Search">
 
-              <input id="artist-input" class="form-control" type="search" placeholder="Search" aria-label="Search">
-        
-              <button class="btn btn-outline-success" (click)="searchArtist()" type="submit">Search</button>
-
-
-                <div class="table-responsive-md">
-                  <table class="table">
-                    <thead>
-                      <tr>
-                        <th scope="col">#</th>
-                        <th scope="col">Artist</th>
-                        <th scope="col">Genre</th>
-                        <th scope="col">Popularity</th>
-                        <th scope="col">Add</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr *ngFor="let artist of artists; index as i;">
-                        <th scope="row">{{ i+1 }}</th>
-                        <td>{{ artist.name }}</td>
-                        <td>{{ artist.genres[0] }}</td>
-                        <td>{{ artist.popularity }}</td>
-                        <td><a (click)="addToPlaylist(artist)">Add</a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-
-
-          </div>
-        </div>
-
-        <div class="card col-md-6" style="width: 18rem;">
-          <div class="card-body">
-            <h5 class="card-title">Playlist</h5>
+              <button class="btn btn-outline-success col-md-2" (click)="searchArtist()" type="submit">Search</button>
+            </div>
             <div class="table-responsive-md">
               <table class="table">
                 <thead>
                   <tr>
                     <th scope="col">#</th>
+                    <th scope="col">Title</th>
                     <th scope="col">Artist</th>
-                    <th scope="col">Genre</th>
+                    <th scope="col">Album</th>
                     <th scope="col">Popularity</th>
-                    <th scope="col">Listen</th>
-                    <th scope="col">Remove</th>
+                    <th scope="col">Add</th>
                   </tr>
                 </thead>
-                <tbody id="static-playlist">
-                  <tr *ngFor="let artist of artists; index as i;">
-                    <!-- Generated from the spotify API table -->
+                <tbody>
+                  <tr *ngFor="let track of tracks; index as i;">
+                    <th scope="row">{{ i+1 }}</th>
+                    <td>{{ track.name }}</td>
+                    <td>{{ track.artists[0].name }}</td>
+                    <td>{{ track.album.name }}</td>
+                    <td>{{ track.popularity }}</td>
+                    <td><a (click)="addToPlaylist(track)">Add</a></td>
                   </tr>
                 </tbody>
               </table>
@@ -81,27 +56,104 @@
           </div>
         </div>
 
+        <div class="card col-md-6" style="width: 18rem;">
+          <div class="card-body">
+            <h5 class="card-title">Playlist</h5>
+            <div class="table-responsive-md">
+              <table class="table" id="static-playlist">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Artist</th>
+                    <th scope="col">Album</th>
+                    <th scope="col">Popularity</th>
+                    <th scope="col">Listen</th>
+                    <th scope="col">Remove</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let artist of artists; index as i;">
+                    <!-- Generated from the spotify API table -->
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+
+            <h2>Share this Playlist:</h2>
+
+            <!-- Inline Share Buttons from https://sharingbuttons.io/-->
+            <div class="row">
+
+              <!-- Sharingbutton Twitter -->
+              <a class="resp-sharing-button__link col-md-4"
+                href="https://twitter.com/intent/tweet/?text={{ playlistLink }}&amp;url=http%3A%2F%2Fspotify.com"
+                target="_blank" rel="noopener" aria-label="Twitter">
+                <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--medium">
+                  <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                      <path
+                        d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm5.26 9.38v.34c0 3.48-2.64 7.5-7.48 7.5-1.48 0-2.87-.44-4.03-1.2 1.37.17 2.77-.2 3.9-1.08-1.16-.02-2.13-.78-2.46-1.83.38.1.8.07 1.17-.03-1.2-.24-2.1-1.3-2.1-2.58v-.05c.35.2.75.32 1.18.33-.7-.47-1.17-1.28-1.17-2.2 0-.47.13-.92.36-1.3C7.94 8.85 9.88 9.9 12.06 10c-.04-.2-.06-.4-.06-.6 0-1.46 1.18-2.63 2.63-2.63.76 0 1.44.3 1.92.82.6-.12 1.95-.27 1.95-.27-.35.53-.72 1.66-1.24 2.04z" />
+                    </svg></div>Twitter
+                </div>
+              </a>
+
+              <!-- Sharingbutton Tumblr -->
+              <a class="resp-sharing-button__link col-md-4"
+                href="https://www.tumblr.com/widgets/share/tool?posttype=link&amp;title={{ playlistLink }}&amp;caption={{ playlistLink }}&amp;content=http%3A%2F%2Fspotify.com&amp;canonicalUrl=http%3A%2F%2Fspotify.com&amp;shareSource=tumblr_share_button"
+                target="_blank" rel="noopener" aria-label="Tumblr">
+                <div class="resp-sharing-button resp-sharing-button--tumblr resp-sharing-button--medium">
+                  <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+                    <svg version="1.1" x="0px" y="0px" width="24px" height="24px" viewBox="0 0 24 24"
+                      enable-background="new 0 0 24 24" xml:space="preserve">
+                      <path
+                        d="M12,0C5.383,0,0,5.383,0,12s5.383,12,12,12s12-5.383,12-12S18.617,0,12,0z M15.492,17.616C11.401,19.544,9.5,17,9.5,14.031 V9.5h-2V8.142c0.549-0.178,1.236-0.435,1.627-0.768c0.393-0.334,0.707-0.733,0.943-1.2c0.238-0.467,0.401-0.954,0.49-1.675H12.5v3h2 v2h-2v3.719c0,2.468,1.484,2.692,2.992,1.701V17.616z" />
+                    </svg></div>Tumblr
+                </div>
+              </a>
+
+              <!-- Sharingbutton E-Mail -->
+              <a class="resp-sharing-button__link col-md-4"
+                href="mailto:?subject=Super%20fast%20and%20easy%20Social%20Media%20Sharing%20Buttons.%20No%20JavaScript.%20No%20tracking.&amp;body=http%3A%2F%2Fsharingbuttons.io"
+                target="_self" rel="noopener" aria-label="E-Mail">
+                <div class="resp-sharing-button resp-sharing-button--email resp-sharing-button--medium">
+                  <div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solidcircle">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                      <path
+                        d="M12 0C5.38 0 0 5.38 0 12s5.38 12 12 12 12-5.38 12-12S18.62 0 12 0zm8 16c0 1.1-.9 2-2 2H6c-1.1 0-2-.9-2-2V8c0-1.1.9-2 2-2h12c1.1 0 2 .9 2 2v8z" />
+                      <path
+                        d="M17.9 8.18c-.2-.2-.5-.24-.72-.07L12 12.38 6.82 8.1c-.22-.16-.53-.13-.7.08s-.15.53.06.7l3.62 2.97-3.57 2.23c-.23.14-.3.45-.15.7.1.14.25.22.42.22.1 0 .18-.02.27-.08l3.85-2.4 1.06.87c.1.04.2.1.32.1s.23-.06.32-.1l1.06-.9 3.86 2.4c.08.06.17.1.26.1.17 0 .33-.1.42-.25.15-.24.08-.55-.15-.7l-3.57-2.22 3.62-2.96c.2-.2.24-.5.07-.72z" />
+                    </svg></div>E-Mail
+                </div>
+              </a>
+
+              <!-- End of Sharing Icons Row -->
+            </div>
+          </div>
+        </div>
+
+
         <!-- End of card rows -->
       </div>
 
 
 
 
-        <div class="card col-md-6">
-          <div class="card-body">
-            ...
-          </div>
+      <div class="card col-md-6">
+        <div class="card-body">
+          ...
         </div>
-
-
       </div>
+
+
+    </div>
 
 
 
 
     <!-- End of Tab Area -->
-    </div>
+  </div>
 
 
   <!-- End of Container -->
-  </div>
+</div>
